update for mne_bids
In case they don't have mne_bids installed

--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z:\\FLUX_BIDS\\derivatives\\Preprocessing\\sub-01\\ses-01\\sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n"
+      "C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\04_Teaching\\LM Application of Electrophysiological Approaches in Cognitive Neuroscience_Ole Jensen\\Flux_pipeline\\derivatives\\Preprocessing\\sub-01\\ses-01\\sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23440\\3963361013.py:11: FutureWarning: extension should start with a period \".\", but got: \"fif\". Prepending \".\" to form: \".fif\". This will raise an exception starting with MNE-BIDS 0.12.\n",
+      "  bids_path = BIDSPath(subject=subject, session=session,\n"
      ]
     }
    ],
@@ -70,7 +78,8 @@
     "max_suffix = 'raw_sss'\n",
     "ann_suffix = 'ann'\n",
     "\n",
-    "deriv_root = r'Z:\\FLUX_BIDS\\derivatives\\Preprocessing'\n",
+    "# deriv_root = r'Z:\\FLUX_BIDS\\derivatives\\Preprocessing'\n",
+    "deriv_root = r'C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\04_Teaching\\LM Application of Electrophysiological Approaches in Cognitive Neuroscience_Ole Jensen\\Flux_pipeline\\derivatives\\Preprocessing'\n",
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "            task=task, run=run, suffix=max_suffix, \n",
     "            root=deriv_root, extension='fif', check=False)\n",
@@ -79,43 +88,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z:\\FLUX_BIDS\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_ann.fif\n",
-      "Opening raw data file Z:\\FLUX_BIDS\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif...\n",
-      "    Range : 208000 ... 1664999 =    208.000 ...  1664.999 secs\n",
-      "Ready.\n",
-      "Reading 0 ... 1456999  =      0.000 ...  1456.999 secs...\n"
+      "C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\04_Teaching\\LM Application of Electrophysiological Approaches in Cognitive Neuroscience_Ole Jensen\\Flux_pipeline\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_ann.fif\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ferranto\\AppData\\Local\\Temp/ipykernel_12132/1490179487.py:7: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
-      "\n",
-      "The search_str was \"Z:\\FLUX_BIDS\\derivatives\\Preprocessing\\sub-01\\**\\meg\\sub-01_ses-01*events.tsv\"\n",
-      "  data1 = read_raw_bids(bids_path=bids_path,\n",
-      "C:\\Users\\ferranto\\AppData\\Local\\Temp/ipykernel_12132/1490179487.py:7: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
-      "\n",
-      "The search_str was \"Z:\\FLUX_BIDS\\derivatives\\Preprocessing\\sub-01\\**\\meg\\sub-01_ses-01*channels.tsv\"\n",
-      "  data1 = read_raw_bids(bids_path=bids_path,\n",
-      "C:\\Users\\ferranto\\AppData\\Local\\Temp/ipykernel_12132/1490179487.py:7: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
-      "\n",
-      "The search_str was \"Z:\\FLUX_BIDS\\derivatives\\Preprocessing\\sub-01\\**\\meg\\sub-01_ses-01*meg.json\"\n",
-      "  data1 = read_raw_bids(bids_path=bids_path,\n",
-      "C:\\Users\\ferranto\\AppData\\Local\\Temp/ipykernel_12132/1490179487.py:7: RuntimeWarning: participants.tsv file not found for Z:\\FLUX_BIDS\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
-      "  data1 = read_raw_bids(bids_path=bids_path,\n"
+     "ename": "ValueError",
+     "evalue": "No electrophysiological data found.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m deriv_file_2 \u001b[38;5;241m=\u001b[39m deriv_file_1\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun-01\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun-02\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(deriv_file_1)\n\u001b[1;32m----> 8\u001b[0m data1 \u001b[38;5;241m=\u001b[39m \u001b[43mread_raw_bids\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbids_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbids_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m                     \u001b[49m\u001b[43mextra_params\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpreload\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m                     \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m<decorator-gen-581>:10\u001b[0m, in \u001b[0;36mread_raw_bids\u001b[1;34m(bids_path, extra_params, verbose)\u001b[0m\n",
+      "File \u001b[1;32m~\\Anaconda3\\envs\\mne\\lib\\site-packages\\mne_bids\\read.py:710\u001b[0m, in \u001b[0;36mread_raw_bids\u001b[1;34m(bids_path, extra_params, verbose)\u001b[0m\n\u001b[0;32m    708\u001b[0m \u001b[38;5;66;03m# infer the datatype and suffix if they are not present in the BIDSPath\u001b[39;00m\n\u001b[0;32m    709\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m datatype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 710\u001b[0m     datatype \u001b[38;5;241m=\u001b[39m \u001b[43m_infer_datatype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroot\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbids_root\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msub\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msub\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mses\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mses\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    711\u001b[0m     bids_path\u001b[38;5;241m.\u001b[39mupdate(datatype\u001b[38;5;241m=\u001b[39mdatatype)\n\u001b[0;32m    712\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m suffix \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\Anaconda3\\envs\\mne\\lib\\site-packages\\mne_bids\\path.py:1853\u001b[0m, in \u001b[0;36m_infer_datatype\u001b[1;34m(root, sub, ses)\u001b[0m\n\u001b[0;32m   1851\u001b[0m modalities \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(modalities) \u001b[38;5;241m&\u001b[39m \u001b[38;5;28mset\u001b[39m(allowed_recording_modalities))\n\u001b[0;32m   1852\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m modalities:\n\u001b[1;32m-> 1853\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo electrophysiological data found.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m   1854\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(modalities) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[0;32m   1855\u001b[0m     msg \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFound data of more than one recording datatype. Please \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m   1856\u001b[0m            \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpass the `suffix` parameter to specify which data to load. \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m   1857\u001b[0m            \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFound the following modalitiess: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodalities\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: No electrophysiological data found."
      ]
     }
    ],
    "source": [
     "deriv_fname = bids_path.basename.replace('MaxFilter', 'preproc')\n",
+    "# deriv_fname = bids_path.basename.replace('Preprocessing', 'MaxFilter')\n",
     "deriv_fname = bids_path.basename.replace(max_suffix, ann_suffix)\n",
     "deriv_file_1 = op.join(bids_path.directory,'meg', deriv_fname)\n",
     "deriv_file_2 = deriv_file_1.replace('run-01', 'run-02')\n",
@@ -196,7 +196,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -270,7 +269,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -318,7 +316,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -840,7 +837,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -867,7 +863,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flux",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -881,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.5"
   },
   "vscode": {
    "interpreter": {
@@ -890,5 +886,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
