Update for mne_bids parts
Added in case no mne_bids installed

--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -37,7 +37,7 @@
     "\n",
     "import numpy as np\n",
     "import mne\n",
-    "from mne_bids import BIDSPath, read_raw_bids"
+    "from mne_bids import BIDSPath, read_raw_bids # If you don't have mne_bids installed, comment this line."
    ]
   },
   {
@@ -54,6 +54,13 @@
     "The MEGIN data are stored in the FIF format which is a binary format with embedded labels.\n",
     "\n",
     "The first step is to set the path to the data as well as the files names. Note that this will dependent on where you have stored the dataset. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading the data - If you have mne_bids installed"
    ]
   },
   {
@@ -85,8 +92,7 @@
     "\n",
     "# bids_root = r'THE PATH TO WHERE YOU WANT TO DOWNLOAD THE DATA'\n",
     "# Example\n",
-    "bids_root = r'/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/' + dataset\n",
-    "\n"
+    "bids_root = r'/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/' + dataset"
    ]
   },
   {
@@ -153,6 +159,56 @@
    "metadata": {},
    "source": [
     "To get some basic information from the FIF file write:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading the data - If you don't have mne_bids installed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_dat = r'C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_meg.fif\n"
+     ]
+    }
+   ],
+   "source": [
+    "fname_dat = op.join(dir_dat, 'sub-01', 'ses-01', 'meg', 'sub-01_ses-01_task-SpAtt_run-01_meg.fif')\n",
+    "print(fname_dat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = mne.io.read_raw_fif(fname_dat, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Looking at the data"
    ]
   },
   {
@@ -251,7 +307,7 @@
    ],
    "source": [
     "n_fft = 2000\n",
-    "data1PSD = data1.compute_psd(method=\"welch\", fmin=1, fmax=60, picks=\"meg\", n_fft = n_fft, n_overlap = int(n_fft/2))"
+    "data1PSD = data1.compute_psd(method=\"welch\", fmin=1, fmax=60, picks=\"meg\", n_fft=n_fft, n_overlap=int(n_fft/2))"
    ]
   },
   {
@@ -289,7 +345,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "data1PSD.plot();"
+    "data1PSD.plot()"
    ]
   },
   {
@@ -329,7 +385,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "data1.plot(duration=10,title='Raw')"
+    "data1.plot(duration=10, title='Raw')"
    ]
   },
   {
@@ -364,7 +420,7 @@
    ],
    "source": [
     "%matplotlib qt\n",
-    "data1.plot(duration=10,title='Raw')"
+    "data1.plot(duration=10, title='Raw')"
    ]
   },
   {
@@ -419,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.5"
   },
   "vscode": {
    "interpreter": {
