Fixed mne_bids parts
Errors are fixed for mne_bids cells

--- a/MNEPython/ApplyingMaxFilter.ipynb
+++ b/MNEPython/ApplyingMaxFilter.ipynb
@@ -141,7 +141,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_168\\3807992030.py:1: RuntimeWarning: The unit for channel(s) STI001, STI002, STI003, STI004, STI005, STI006, STI007, STI008, STI009, STI010, STI011, STI012, STI013, STI014, STI015, STI016, STI101, STI102 has changed from V to NA.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_19008\\3807992030.py:1: RuntimeWarning: The unit for channel(s) STI001, STI002, STI003, STI004, STI005, STI006, STI007, STI008, STI009, STI010, STI011, STI012, STI013, STI014, STI015, STI016, STI101, STI102 has changed from V to NA.\n",
       "  data1 = read_raw_bids(bids_path=bids_path,\n"
      ]
     }
@@ -903,14 +903,16 @@
       "Maxwell filtering raw data\n",
       "    Bad MEG channels being reconstructed: ['MEG0911', 'MEG0912', 'MEG0913', 'MEG0921', 'MEG0922', 'MEG0923', 'MEG0932', 'MEG1212', 'MEG2311']\n",
       "    Processing 204 gradiometers and 102 magnetometers\n",
-      "    Using fine calibration sub-01_ses-01_acq-calibration_meg.dat\n"
+      "    Using fine calibration sub-01_ses-01_acq-calibration_meg.dat\n",
+      "        Adjusting non-orthogonal EX and EY\n",
+      "        Adjusted coil positions by (μ ± σ): 0.3° ± 0.3° (max: 1.6°)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_168\\2427503492.py:3: RuntimeWarning: The unit for channel(s) STI001, STI002, STI003, STI004, STI005, STI006, STI007, STI008, STI009, STI010, STI011, STI012, STI013, STI014, STI015, STI016, STI101, STI102 has changed from V to NA.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_19008\\2427503492.py:3: RuntimeWarning: The unit for channel(s) STI001, STI002, STI003, STI004, STI005, STI006, STI007, STI008, STI009, STI010, STI011, STI012, STI013, STI014, STI015, STI016, STI101, STI102 has changed from V to NA.\n",
       "  data2 = read_raw_bids(bids_path=bids_path,\n"
      ]
     },
@@ -918,8 +920,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Adjusting non-orthogonal EX and EY\n",
-      "        Adjusted coil positions by (μ ± σ): 0.3° ± 0.3° (max: 1.6°)\n",
       "    Automatic origin fit: head of radius 96.3 mm\n",
       "    Using origin 0.1, 3.0, 30.2 mm in the head frame\n",
       "        Using 88/95 harmonic components for    0.000  (73/80 in, 15/15 out)\n",
