--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -103,19 +103,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\3807992030.py:1: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\3807992030.py:1: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
       "The search_str was \"C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\**\\meg\\sub-01_ses-01*events.tsv\"\n",
       "  data1 = read_raw_bids(bids_path=bids_path,\n",
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\3807992030.py:1: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\3807992030.py:1: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
       "The search_str was \"C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\**\\meg\\sub-01_ses-01*channels.tsv\"\n",
       "  data1 = read_raw_bids(bids_path=bids_path,\n",
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\3807992030.py:1: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\3807992030.py:1: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
       "The search_str was \"C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\**\\meg\\sub-01_ses-01*meg.json\"\n",
       "  data1 = read_raw_bids(bids_path=bids_path,\n",
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\3807992030.py:1: RuntimeWarning: participants.tsv file not found for C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\3807992030.py:1: RuntimeWarning: participants.tsv file not found for C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
       "  data1 = read_raw_bids(bids_path=bids_path,\n"
      ]
     }
@@ -340,7 +340,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\2687702282.py:1: RuntimeWarning: Limited 1 annotation(s) that were expanding outside the data range.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\2687702282.py:1: RuntimeWarning: Limited 1 annotation(s) that were expanding outside the data range.\n",
       "  data1.set_annotations(annotations_blink+annotations_muscle)\n"
      ]
     },
@@ -565,7 +565,7 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x21c1159d360>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x17408445c60>"
       ]
      },
      "execution_count": 10,
@@ -600,7 +600,7 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x21c1dbc7520>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x174120a00d0>"
       ]
      },
      "execution_count": 11,
@@ -641,7 +641,7 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x21c24903d90>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x174356c88b0>"
       ]
      },
      "execution_count": 12,
@@ -700,7 +700,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\852638028.py:1: RuntimeWarning: This filename (C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\852638028.py:1: RuntimeWarning: This filename (C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
       "  data1.save(deriv_file_1, overwrite=True)\n"
      ]
     },
@@ -749,19 +749,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\1532375208.py:4: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\1532375208.py:4: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
       "\n",
       "The search_str was \"C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\**\\meg\\sub-01_ses-01*events.tsv\"\n",
       "  data2 = read_raw_bids(bids_path=bids_path,\n",
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\1532375208.py:4: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\1532375208.py:4: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
       "\n",
       "The search_str was \"C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\**\\meg\\sub-01_ses-01*channels.tsv\"\n",
       "  data2 = read_raw_bids(bids_path=bids_path,\n",
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\1532375208.py:4: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-02.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\1532375208.py:4: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-02.\n",
       "\n",
       "The search_str was \"C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\**\\meg\\sub-01_ses-01*meg.json\"\n",
       "  data2 = read_raw_bids(bids_path=bids_path,\n",
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\1532375208.py:4: RuntimeWarning: participants.tsv file not found for C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-02_raw_sss.fif\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\1532375208.py:4: RuntimeWarning: participants.tsv file not found for C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-02_raw_sss.fif\n",
       "  data2 = read_raw_bids(bids_path=bids_path,\n"
      ]
     },
@@ -818,9 +818,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\1532375208.py:25: RuntimeWarning: Omitted 487 annotation(s) that were outside data range.\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\1532375208.py:25: RuntimeWarning: Omitted 487 annotation(s) that were outside data range.\n",
       "  data2.set_annotations(annotations_blink+annotations_muscle)\n",
-      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_23684\\1532375208.py:28: RuntimeWarning: This filename (C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-02_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "C:\\Users\\parkh\\AppData\\Local\\Temp\\ipykernel_21952\\1532375208.py:28: RuntimeWarning: This filename (C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-02_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
       "  data2.save(deriv_file_2, overwrite=True)\n"
      ]
     },
@@ -829,16 +829,7 @@
      "output_type": "stream",
      "text": [
       "Closing C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-02_ann.fif\n",
-      "[done]\n",
-      "Closing raw-browser...\n",
-      "Channels marked as bad:\n",
-      "none\n",
-      "Closing raw-browser...\n",
-      "Channels marked as bad:\n",
-      "none\n",
-      "Closing raw-browser...\n",
-      "Channels marked as bad:\n",
-      "none\n"
+      "[done]\n"
      ]
     }
    ],
