Update re mne_bids
Added cells in case not using mne_bids

--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading the data - If you don't have mne_bids installed"
+    "### Loading the data - If you don't have mne_bids installed: Uncomment these two cells"
    ]
   },
   {
@@ -174,34 +174,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_dat = r'C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX'"
+    "# dir_dat = r'C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX'\n",
+    "# fname_dat = op.join(dir_dat, 'sub-01', 'ses-01', 'meg', 'sub-01_ses-01_task-SpAtt_run-01_meg.fif')\n",
+    "# print(fname_dat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_meg.fif\n"
-     ]
-    }
-   ],
-   "source": [
-    "fname_dat = op.join(dir_dat, 'sub-01', 'ses-01', 'meg', 'sub-01_ses-01_task-SpAtt_run-01_meg.fif')\n",
-    "print(fname_dat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = mne.io.read_raw_fif(fname_dat, verbose=False)"
+    "# data1 = mne.io.read_raw_fif(fname_dat, verbose=False)"
    ]
   },
   {
