--- a/MNEPython/Conditions.ipynb
+++ b/MNEPython/Conditions.ipynb
@@ -341,6 +341,7 @@
     "            preload=True,\n",
     "            verbose=True)\n",
     "\n",
+    "# Here you do SSP via proj = True\n",
     "# Show epochs details\n",
     "epochs"
    ]
