--- a/MNEPython/Conditions.ipynb
+++ b/MNEPython/Conditions.ipynb
@@ -542,6 +542,7 @@
     "            preload=True,\n",
     "            verbose=True)\n",
     "\n",
+    "# Here SSP is applied via proj = TRUE \n",
     "# Show epochs details\n",
     "epochs"
    ]
