--- a/MNEPython/Classification.ipynb
+++ b/MNEPython/Classification.ipynb
@@ -108,10 +108,12 @@
      ]
     }
    ],
+   
    "source": [
     "epochs = mne.read_epochs(bids_path.fpath,\n",
     "                         preload=True,\n",
     "                         verbose=True).pick(['meg'])"
+    "Here in the current version of MNE SSP filter will be applied again (any mne.read_epochs)"
    ]
   },
   {
