SSP: Update EventRelatedFields.ipynb
marked where SSP is applied

--- a/MNEPython/EventRelatedFields.ipynb
+++ b/MNEPython/EventRelatedFields.ipynb
@@ -100,6 +100,9 @@
     "                         preload=True,\n",
     "                         verbose=True)"
    ]
+   "source": [
+    "In a current version of MNE read_epochs will apply SSP filter (to not do it add proj = False)"
+   ]
   },
   {
    "cell_type": "markdown",
