--- a/MNEPython/Introduction.ipynb
+++ b/MNEPython/Introduction.ipynb
@@ -16,13 +16,13 @@
     "This section will focus on [MNE-Python](https://mne.tools/stable/index.html). The core arguments for using MNE-Python are:\n",
     "\n",
     "- The MNE-Python toolbox is supported by an active and dynamic group of developers ensuring that the latest analysis tools are available.\n",
-    "- The  toolbox and pipeline are Open Source and henceforth compatible with Open Science approaches.\n",
+    "- The  toolbox and pipeline are open zource and henceforth compatible with Open Science approaches.\n",
     "- The toolbox is based on Python which is free (as opposed to Matlab, for instance).\n",
     "- Python is becoming the preferred programming language for novel data analyses approaches including a wealth of machine learning tools. Python modules are under constant development by a huge open sources community ensuring the availability of state-of-the-art data science tools.\n",
     "\n",
     "## Target users\n",
     "\n",
-    "The target users are researchers new to MNE-Python as well as more advanced users seeking to standardize their analyses. The FLUX pipeline is particular geared towards cognitive neuroscientist with an interest in task-based paradigms. The developers of the pipeline are cognitve neuroscientists with a strong interest on brain oscillations and multivariate approaches.\n",
+    "The target users are researchers new to MNE-Python as well as more advanced users seeking to standardize their analyses. The FLUX pipeline is particular geared towards cognitive neuroscientist with an interest in task-based paradigms. The developers of the pipeline are cognitve neuroscientists with a strong interest on brain oscillations and multivariate approaches. \n",
     "\n",
     "## Using the pipeline in self-studies and education\n",
     "\n",
@@ -31,25 +31,18 @@
     "\n",
     "We will not link back to sections on the MNE Python webpage as they will change over time; nevertheless, users are are strongly encouraged to consult the website as they develop their skills and insight. \n",
     "\n",
-    "To use the FLUX toolbox the following installations and downloads are required:\n",
+    "**The FLUX toolbox has been test using MNE Python version 1.16.1**\n",
     "\n",
-    "1) Install the Python environment; we recommend Anaconda3 which provide Jupyter notebooks and Spyder; see [anaconda.com](https://www.anaconda.com/)\n",
+    "To use the FLUX toolbox we recommend using the standalone installers: [MNE installation](https://mne.tools/stable/install/index.html)\n",
     "\n",
-    "2) Install MNE Python ([instructions](https://mne.tools/dev/install/index.html)). To make 3D rendering possible, we recommend:\n",
-    "\n",
-    ">  conda create --name=mne --channel=conda-forge mne<br />\n",
-    ">  conda install --name base nb_conda_kernels  \n",
-    "\n",
-    "3) Install OpenNEURO and MNE-BIDS. These modules will be used to download and read the BIDS sample data.\n",
-    "\n",
-    ">  conda activate mne<br />\n",
-    ">  conda install -c conda-forge openneuro-py<br />\n",
-    ">  conda install --channel conda-forge --no-deps mne-bids<br />\n",
-    "\n",
-    "4) Get the Jupyther notebooks from Github (see [FLUX website](https://neuosc.com/flux/); alternatively copy/paste the code from Github an execute using e.g. Spyder.\n",
+    "The Jupyther notebooks are available from Github (see [FLUX website](https://neuosc.com/flux/)); alternatively copy/paste the code from Github an execute using e.g. Spyder.\n",
     "\n",
     "To create forward models based on T1 MRIs for source modeling [Freesurfer](https://surfer.nmr.mgh.harvard.edu/) is required.   \n",
     "\n",
+    "\n",
+    "## The data set ##\n",
+    "\n",
+    "The dataset for the FLUX based on MNE Python is available on [OpenNeuro](https://openneuro.org/datasets/ds004346/versions/1.0.2). It is stored as fiff-files organized in the  [MEG BIDS format](https://www.nature.com/articles/sdata2018110). The dataset is used in the step-by-step tutorials. It is from a simple paradigm on spatial attention. The participants are asked to attend left or right to a moving grating. The task and stimulation produce robust modulations in the alpha and gamma bands. \n",
     "\n"
    ]
   },
@@ -62,12 +55,15 @@
     "\n",
     "Publication, example:\n",
     "\n",
-    "\"The data were analyzed using the open source toolbox MNE Python v0.24.0 (Gramfort et al., 2013) following the standards defined in the FLUX Pipeline (Ferrante et al., 2022)\"\n",
+    "\"The data were analyzed using the open source toolbox MNE Python v1.16.1 (Gramfort et al., 2013) following the standards defined in the FLUX Pipeline (Ferrante et al., 2022)\"\n",
     "\n",
     "## References\n",
     "\n",
     "Alexandre Gramfort, Martin Luessi, Eric Larson, Denis A. Engemann, Daniel Strohmeier, Christian Brodbeck, Roman Goj, Mainak Jas, Teon Brooks, Lauri Parkkonen, and Matti S. Hämäläinen. MEG and EEG data analysis with MNE-Python. Frontiers in Neuroscience, 7(267):1–13, 2013. doi:10.3389/fnins.2013.00267.\n",
-    "\n"
+    "\n",
+    "Niso, G., Gorgolewski, K., Bock, E. et al. MEG-BIDS, the brain imaging data structure extended to magnetoencephalography. Sci Data 5, 180110 (2018). https://doi.org/10.1038/sdata.2018.110\n",
+    "\n",
+    "Appelhoff S, Sanderson M, Brooks TL, van Vliet M, Quentin R, Holdgraf C, Chaumon M, Mikulan E, Tavabi K, Höchenberger R, Welke D, Brunner C, Rockhill AP, Larson E, Gramfort A, Jas M. MNE-BIDS: Organizing electrophysiological data into the BIDS format and facilitating their analysis. J Open Source Softw. 2019;4(44):1896. doi: 10.21105/joss.01896. "
    ]
   }
  ],
@@ -87,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
