--- a/MNEPython/TheDataset.ipynb
+++ b/MNEPython/TheDataset.ipynb
@@ -29,7 +29,7 @@
     "* EOG and ECG recordings \n",
     "* Stimulus delivery computer using Matlab/Psychtoolbox\n",
     "\n",
-    "Please see <a href=\"https://www.neuosc.com/flux/\" target=\"_blank\">https://www.neuosc.com/flux/</a> for where to find the data.\n",
+    "Please see \"The Introduction\" for where to find the data.\n",
     "\n",
     "\n",
     "\n",
@@ -64,11 +64,18 @@
     "* Jensen, O., and Hanslmayr, S., 2020. The Role of Alpha Oscillations for Attention and Working Memory. In. Poeppel, D., Mangun, G.R., and Gazzaniga, M.S. (eds) The cognitive neurosciences, 6th MIT Press.\n",
     "* Brainard, D.H., 1997. The Psychophysics Toolbox. Spat Vis 10, 433–436.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mne",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -82,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:15:42) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
@@ -91,5 +98,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
