File input output added

--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -62,8 +62,9 @@
    "source": [
     "### File overview\n",
     "The chapter relies on the file (embedded in the BIDS structure):\n",
-    "\n",
-    "sub-01_ses-01_task-SpAtt_run-01_meg.fif"
+    "~~~\n",
+    "<BIDS_ROOT>/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_meg.fif\n",
+    "~~~"
    ]
   },
   {
@@ -113,7 +114,8 @@
       "✅ Finished downloading ds004346.\n",
       " \n",
       "🧠 Please enjoy your brains.\n",
-      " \n"
+      " \n",
+      "🔄 Request timed out while downloading /Users/o.jensen@bham.ac.uk/Python/FLUX/Code/FLUX/MNEPython/Z:\\FLUX_BIDS/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_meg.fif, retrying in 0.5 sec …\n"
      ]
     }
    ],
@@ -5199,6 +5201,34 @@
       },
       "text/plain": [
        "Resuming sub-01_ses-01_task-SpAtt_run-01_meg.fif:   6%|6         | 119M/1.87G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5860ee3bb2aa4ec68d3d8a1e34c6f0c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Resuming sub-01_ses-01_task-SpAtt_run-02_meg.fif:   7%|7         | 132M/1.84G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f5cb3f8506754aaeb820ae896e65883c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Resuming sub-01_ses-01_task-SpAtt_run-02_meg.fif:  33%|###2      | 612M/1.84G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
