--- a/MNEPython/Introduction.ipynb
+++ b/MNEPython/Introduction.ipynb
@@ -33,6 +33,8 @@
     "\n",
     "**The FLUX toolbox has been test using MNE Python version 1.6.1**\n",
     "\n",
+    "## Installation\n",
+    "\n",
     "To use the FLUX toolbox we recommend using the standalone installers: [MNE installation](https://mne.tools/stable/install/index.html)\n",
     "\n",
     "The Jupyther notebooks are available from Github (see [FLUX website](https://neuosc.com/flux/)); alternatively copy/paste the code from Github an execute using e.g. Spyder.\n",
