--- a/MNEPython/ApplyingMaxFilter.ipynb
+++ b/MNEPython/ApplyingMaxFilter.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +70,12 @@
     "task = 'SpAtt'\n",
     "run = '01'\n",
     "\n",
-    "#bids_root = r'C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX' # path to where you downloaded data\n",
-    "bids_root = '/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/'\n",
+    "bids_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data'\n",
     "\n",
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "            task=task, run=run, suffix='meg', extension='.fif', root=bids_root)\n",
     "\n",
-    "#deriv_root = r'C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing' # path to the MaxFilter derivatives folder, with similar BIDS structure as raw data \n",
-    "deriv_root = '/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing'\n",
+    "deriv_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing'\n",
     "\n",
     "deriv_path = BIDSPath(subject=subject, session=session, datatype='meg',\n",
     "            task=task, run=run, suffix='meg', root=deriv_root).mkdir()\n",
@@ -96,15 +94,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/sub-01/ses-01/meg/sub-01_ses-01_acq-crosstalk_meg.fif\n",
-      "/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/sub-01/ses-01/meg/sub-01_ses-01_acq-calibration_meg.dat\n"
+      "None\n",
+      "None\n"
      ]
     }
    ],
@@ -1139,7 +1137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
