--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -417,7 +417,7 @@
     "**Question 3:** Scroll through the MEG data and identify the following artifacts (include figures in the response):\n",
     "\n",
     "- Eye-blink\n",
-    "- A muscle contraction (characterized by high-frequency activity\n",
+    "- A muscle contraction (characterized by high-frequency activity)\n",
     "- The cardiac artifact\n",
     "\n"
    ]
@@ -428,7 +428,7 @@
    "source": [
     "## Preregistration and publication\n",
     "\n",
-    "Preregistration: report the sampling frequency and the properties of the anti-aliasing lowpass filter. Also report the peripheral data to be recorded (e.g. the EOG and ECG)\n",
+    "Preregistration: Report the sampling frequency and the properties of the anti-aliasing lowpass filter. Also report the peripheral data to be recorded (e.g. the EOG and ECG).\n",
     "\n",
     "Publication, example:\n",
     "\n",
