renamed data1 to raw1 according to PEP8

--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -212,7 +212,7 @@
    ],
    "source": [
     "print(bids_path)\n",
-    "data1 = read_raw_bids(bids_path=bids_path, verbose=False)"
+    "raw1 = read_raw_bids(bids_path=bids_path, verbose=False)"
    ]
   },
   {
@@ -243,7 +243,7 @@
     }
    ],
    "source": [
-    "print(data1)"
+    "print(raw1)"
    ]
   },
   {
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "print(data1.info)"
+    "print(raw1.info)"
    ]
   },
   {
@@ -326,7 +326,7 @@
    ],
    "source": [
     "n_fft = 2000\n",
-    "data1PSD = data1.compute_psd(method=\"welch\", fmin=1, fmax=60, picks=\"meg\", n_fft=n_fft, n_overlap=int(n_fft/2))"
+    "data1PSD = raw1.compute_psd(method=\"welch\", fmin=1, fmax=60, picks=\"meg\", n_fft=n_fft, n_overlap=int(n_fft/2))"
    ]
   },
   {
@@ -405,7 +405,7 @@
    ],
    "source": [
     "%matplotlib qt\n",
-    "data1.plot(duration=10, title='Raw')"
+    "raw1.plot(duration=10, title='Raw')"
    ]
   },
   {
